--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "express-mustache",
   "version": "0.0.0",
   "description": "mustache express bootstrap",
-  "main": "server/main.ts",
+  "main": "server/main.server.ts",
+  "type": "module",
   "scripts": {
     "dev": "nodemon",
+    "build": "esno ./main.prerender.ts",
     "format": "prettier --write ./**/*.{ts,js,jsx,css,less,md,json}"
   },
   "keywords": [],
@@ -12,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.1",
+    "iesmo": "^0.0.2",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2"
   },
